tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__operator__add_bool_string.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/add_bool_string.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `+`: lhs has type `Bool`, but rhs has type `String`
   ╭─[craftinginterpreters/test/operator/add_bool_string.lox:1:1]
   │
 1 │ true + "s"; // expect runtime error: Operands must be two numbers or two strings.
   │ ──┬─ ┬ ─┬─  
   │   │  │  ╰─── this is of type `String`
   │   │  │      
   │   │  ╰────── the operator in question
   │   │         
   │   ╰───────── this is of type `Bool`
   │ 
   │ Help: operator `+` can only be applied to two numbers or two strings
───╯
